--- a/playbooks/group_vars/all.yml
+++ b/playbooks/group_vars/all.yml
@@ -5,7 +5,7 @@ PYZ_VERSION: "3.12"
 environment_vars:
   _BPXK_AUTOCVT: "ON"
   ZOAU_HOME: "{{ ZOAU }}"
-  PYTHONPATH: "{{ ZOAU }}/lib/{{ PYZ_VERSION}}"
+  PYTHONPATH: "{{ ZOAU }}/lib/{{ PYZ_VERSION}}:/tmp/lib"
   LIBPATH: "{{ ZOAU }}/lib:{{ PYZ }}/lib:/lib:/usr/lib:."
   PATH: "{{ ZOAU }}/bin:{{ PYZ }}/bin:/bin:/var/bin"
   _CEE_RUNOPTS: "FILETAG(AUTOCVT,AUTOTAG) POSIX(ON)"
